<resources>
    <string name="app_name">校园新闻</string>
    <string name="register_page">注册页面</string>
    <string name="submit">提交</string>
    <string name="user_phone">请输入手机号</string>
    <string name="get_captcha">获取验证码</string>
    <string name="captcha">请输入验证码</string>
    <string name="user_password">请输入密码</string>
    <string name="user_password_again">请再次输入密码</string>
    <string name="resetpassword"><![CDATA[找回密码                  ]]></string>
    <string name="input_new_password">请输入新密码:</string>
    <string name="edit_new_password">请输入新密码</string>
    <string name="confirm_password"><![CDATA[确认新密码:    ]]></string>
    <string name="confirm_new_password_again">请再次输入密码</string>
    <string name="captcha_new"><![CDATA[      验证码:      ]]></string>
    <string name="input_captcha">请输入验证码</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>