<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/theme_color">
        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/left"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/resetpassword"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">
        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="  请输入账号:  "
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        <EditText
            android:id="@+id/et_account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:hint="请输入账号"
            android:inputType="number"
            android:maxLength="11"
            android:textColorHint="@color/gray"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">
        <TextView
            android:id="@+id/tv_new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/input_new_password"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        <EditText
            android:id="@+id/et_pwd_first"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:hint="@string/edit_new_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColorHint="@color/gray"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">
        <TextView
            android:id="@+id/tv_new_pwd_again"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="17sp"/>
        <EditText
            android:id="@+id/et_pwd_second"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:hint="@string/confirm_new_password_again"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textSize="17sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">
        <TextView
            android:id="@+id/tv_captcha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/captcha_new"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/black"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <EditText
                android:id="@+id/et_captcha"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/input_captcha"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <Button
                android:id="@+id/btn_get_captcha"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:text="@string/get_captcha"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginBottom="16dp"/>
        </RelativeLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/theme_color"
        android:text="@string/submit"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp" />
   <!-- <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="111"/>-->

</LinearLayout>