<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCountActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/theme_color">
        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/left"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register_page"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/save_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <!--<ImageView
        android:id="@+id/user_head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/campus_new_log"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/register_user"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:inputType="phone"
            android:maxLength="11"

            android:hint="@string/user_phone" />
        <Button
            android:id="@+id/btn_get_captcha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/get_captcha"/>
    </LinearLayout>
    <EditText
        android:id="@+id/et_captcha"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="48dp"
        android:hint="@string/captcha"
        android:inputType="number"
        android:maxLength="6"/>
    <EditText
        android:id="@+id/u_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="请输入昵称"
        android:inputType="text"
        android:maxLength="12"/>
    <RadioGroup
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sex"/>
        <RadioButton
            android:id="@+id/rb_man"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:checked="true"
            android:text="男"
            android:textSize="17sp"/>
        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="女"
            android:textSize="17sp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btn_ok"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/birthday"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="生日"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <ImageView
            android:id="@+id/im_birthday"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/date"/>
        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textSize="20sp"/>

    </LinearLayout>
    <EditText
        android:id="@+id/u_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="请输入邮箱"
        android:inputType="textEmailAddress"
        android:maxLength="30"/>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="48dp"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:maxLength="12"/>
    <EditText
        android:id="@+id/again_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/user_password_again"
        android:inputType="textPassword"
        android:maxLength="12"/>

</LinearLayout>